@@ -11,6 +11,9 @@ BUGFIXES:
   
   ZOOKEEPER-330. zookeeper standalone server does not startup with just a port
 and datadir. (chris darroch and mahadev)
+
+  ZOOKEEPER-319. add locking around auth info in zhandle_t. (chris darroch via
+mahadev)
  
 IMPROVEMENTS:
   ZOOKEEPER-308. improve the atomic broadcast performance 3x. (breed via
